--- a/patatibne/srcs/requirements/nginx/conf/nginx.conf
+++ b/patatibne/srcs/requirements/nginx/conf/nginx.conf
@@ -10,14 +10,14 @@
         root /var/www/html;
 
         location / {
-            try_files $uri $uri/ /index.php?$args;
+            try_files $uri $uri/ /index.php?$args; #prova vari uri, alle brutte php
         }
 
         location ~ [^/]\.php(/|$) { 
-            try_files $uri =404;
-            fastcgi_pass wordpress:9000;
-            include fastcgi_params;
-            fastcgi_param SCRIPT_FILENAME $document_root$fastcgi_script_name;
-            fastcgi_param QUERY_STRING    $query_string;
+            try_files $uri =404; #verifioca lo'uri
+            fastcgi_pass wordpress:9000; #standard per far comunicare nginx e php
+            include fastcgi_params; #legge l'omonimo file e include tutto, serve a php
+            fastcgi_param SCRIPT_FILENAME $document_root$fastcgi_script_name; #ponte tra url e eserver
+            fastcgi_param QUERY_STRING    $query_string; #fa accedere a pahp i parametri quary dell'url
         }
     }
