--- a/patatibne/srcs/requirements/nginx/Dockerfile
+++ b/patatibne/srcs/requirements/nginx/Dockerfile
@@ -8,6 +8,9 @@ RUN openssl req -x509 -nodes -days 365 -newkey rsa:2048 \
     -keyout /etc/ssl/private/nginx-selfsigned.key \
     -out /etc/ssl/certs/nginx-selfsigned.crt \
     -subj "/C=IT/ST=None/L=None/O=42/OU=student/CN=${DOMAIN_NAME}"
+	#genera cert ssl con dei parametri
+	#genera la chiave
+	#specifica info
 
 COPY ./conf/nginx.conf /etc/nginx/conf.d/default.conf
 
