--- a/srcs/requirements/nginx/Dockerfile
+++ b/srcs/requirements/nginx/Dockerfile
@@ -1,4 +1,4 @@
-FROM debian:oldstable
+FROM debian:bullseye
 
 RUN apt-get upgrade -y && apt-get update -y
 
@@ -8,9 +8,6 @@ RUN openssl req -x509 -nodes -days 365 -newkey rsa:2048 \
     -keyout /etc/ssl/private/nginx-selfsigned.key \
     -out /etc/ssl/certs/nginx-selfsigned.crt \
     -subj "/C=IT/ST=None/L=None/O=42/OU=student/CN=${DOMAIN_NAME}"
-	#genera cert ssl con dei parametri
-	#genera la chiave
-	#specifica info
 
 COPY ./conf/nginx.conf /etc/nginx/conf.d/default.conf
 
