--- a/srcs/.env
+++ b/srcs/.env
@@ -1,5 +1,5 @@
 # NGINX SETUP
-DOMAIN_NAME=jcardina.42.fr
+DOMAIN_NAME=mcamilli.42.fr
 NGINX_CERT_PATH=/etc/ssl/certs/nginx-selfsigned.crt
 
 # WORDPRESS APPLICATION SETUP
