--- a/srcs/requirements/nginx/conf/nginx.conf
+++ b/srcs/requirements/nginx/conf/nginx.conf
@@ -1,6 +1,6 @@
     server {
         listen 443 ssl;
-        server_name jcardina.42.fr;
+        server_name mcamilli.42.fr;
 
         ssl_certificate /etc/ssl/certs/nginx-selfsigned.crt;
         ssl_certificate_key /etc/ssl/private/nginx-selfsigned.key;
